--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,6 @@ body {
     background-color: #F8F7F4;
 }
 
-header {
-    display: flex;
-    padding: 28px 133px 28px 110px;
-}
-
 select {
     /* Hide default arrow */
     -moz-appearance: none;
@@ -30,6 +25,26 @@ tr:nth-child(even) {
     background-color: #F3EBE5;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    margin-top: 50px;
+}
+
+iframe {
+    width: 560px;
+    height: 315px;
+}
+
+@media screen and (max-width: 1000px) {
+    iframe {
+        width: 280px;
+        height: 157px;
+    }
+}
+
 /* Fonts */
 h1 {
     font-family: "Francois One", sans-serif;
@@ -49,6 +64,13 @@ h1 {
     }
 }
 
+h3 {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+
 .dm-sans-regular {
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
@@ -56,10 +78,46 @@ h1 {
     font-style: normal;
 }
 
-.barlow-condensed-semibold {
+.dm-sans-names {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    position: absolute;
+    left: 30px;
+    bottom: 35px;
+    color: #F8F7F4;
+    font-size: 20px;
+    line-height: 1;
+    z-index: 1;
+    padding-bottom: 3px;
+}
+
+@media screen and (min-width: 640px) {
+    .dm-sans-names {
+        font-size: 24px;
+    }
+}
+
+.dm-sans-info {
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    position: absolute;
+    left: 30px;
+    bottom: 20px;
+    color: #F8F7F4;
+    font-size: 14px;
+    z-index: 1;
+}
+
+.barlow-teams {
     font-family: "Barlow Condensed", sans-serif;
     font-weight: 600;
     font-style: normal;
+    color: #F8F7F4;
+    font-size: 64px;
 }
 
 /* Header section classes */
@@ -74,11 +132,19 @@ h1 {
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 5vh;
+    padding-top: 8vh;
 }
 
 .paris-logo {
     width: 100px;
     height: 100px;
+}
+
+.top-flag {
+    width: 50px;
+    border-radius: 2px;
+    padding-bottom: 80px;
 }
 
 .vertical-line {
@@ -94,24 +160,165 @@ h1 {
     padding-left: 10px;
     color: #262626;
     font-size: 12px;
-    width: 166px;
+    width: 140px;
     height: 35px;
-    border-radius: 8px;
+    border-radius: 20px;
     border-width: 2px;
     border-color: #F3EBE5;
     box-shadow: none;
     outline: none;
+    background-image: url("dropdown-arrow-gray.png");
+    background-repeat: no-repeat;
+    background-position: right 0.9rem top 50%;
+    background-size: 0.55rem auto;
 }
 
 /* Main content section classes */
-.top-section {
+#top-section {
+    position: relative;
     text-align: center;
-    padding: 2vw 10vw;
+    height: 480px;
+    padding: 2vw 10vw 0 10vw;
+    margin: 3vw 6vw 2vw 6vw;
+    border-radius: 24px;
+    z-index: 0;
+}
+
+@media screen and (min-height: 640px) {
+    #top-section {
+        height: 75vh;
+    }
+}
+
+#sports-content {
+    display: none;
+    position: absolute;
+    top: 5vw;
+    left: 0;
+}
+
+.description {
+    margin: -30px 5%;
+    background-color: #F8F7F4;
+    padding: 20px;
+    border-radius: 24px;
+}
+
+.sports-details {
+    margin: 30px 0 10px 0;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    color: #262626;
+}
+
+.details-first {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.dates {
+    background-color: #F3EBE5;
+    border-radius: 24px;
+    line-height: 40px;
+    padding: 0 25px 0 20px;
+    margin-right: 20px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+
+.location {
+    background-color: #F3EBE5;
+    border-radius: 24px;
+    line-height: 15px;
+    padding: 0 25px 0 20px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+/* Tooltip */
+.tooltip-trigger {
+    cursor: pointer;
+    padding-bottom: -10px;
+    border-bottom: 2px dotted #262626;
+}
+
+.tooltip {
+    display: none;
+    position: absolute;
+    top: -160px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200px;
+    height: 140px;
+    border-radius: 24px;
+    border: 3px solid #F3EBE5;
+    background-color: #F3EBE5;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    z-index: 100;
+}
+
+.tooltip img {
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+}
+
+.tooltip-trigger:hover + .tooltip {
+    display: block;
+}
+
+.icon {
+    width: 20px;
+    margin: -3px 7px 0 0;
 }
 
 .sub-heading {
     font-size: 18px;
     color: #262626;
+}
+
+#team-select {
+    transition: all 0.3s ease;
+    background-color: #262626;
+    padding-left: 20px;
+    margin-top: 5vw;
+    position: absolute;
+    bottom: 5vw;
+    left: 50%;
+    margin-left: -105px;
+    color: #F8F7F4;
+    font-size: 14px;
+    width: 210px;
+    height: 40px;
+    border-radius: 40px;
+    border-width: 0;
+    box-shadow: none;
+    outline: none;
+    background-image: url("dropdown-arrow.png");
+    background-repeat: no-repeat;
+    background-position: right 0.9rem top 50%;
+    background-size: 0.6rem auto;
+    z-index: 1;
+}
+
+#team-select:hover {
+    transition: all 0.3s ease;
+    background-color: #383838;
+}
+
+.top-gradient {
+    width: 88vw;
+    height: 40%;
+    bottom: 10vh;
+    left: 0;
+    z-index: 1;
+    position: absolute;
+    background: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
+    border-radius: 0 0 24px 24px;
 }
 
 .teams-section {
@@ -121,6 +328,295 @@ h1 {
     padding: 0 10vw;
 }
 
+.images-section {
+    margin-top: 4vh;
+    padding: 0 110px;
+}
+
 #teams {
     width: 100%;
+}
+
+.image-container {
+    position: relative;
+}
+
+.teams-image {
+    width: 100%;
+    height: 60px;
+    border-radius: 15px;
+    object-fit: cover;
+    object-position: 0 50%;
+    filter: brightness(50%);
+}
+
+.athletes-section {
+    display: grid;
+    padding: 0 5vw;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (min-width: 900px) {
+    .athletes-section {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .athletes-section {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.athlete-wrapper {
+    transition: all 0.2s ease;
+    position: relative;
+    width: 92%;
+    height: 92%;
+    margin: 4%;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.athlete-wrapper:hover {
+    transition: all 0.2s ease;
+    width: 96%;
+    height: 96%;
+    margin: 2%;
+}
+
+.card-gradient {
+    width: 100%;
+    height: 40%;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    position: absolute;
+    background: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
+    border-radius: 0 0 24px 24px;
+}
+
+.athlete-card {
+    font-size: 30px;
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
+    background-color: #F3EBE5;
+    position: relative;
+    object-fit: cover;
+}
+
+.footer-section {
+    display: inline-block;
+    background-color: #F3EBE5;
+    color: #262626;
+    font-size: 16px;
+    display: inline-block;
+    border-radius: 50px;
+    padding: 8px 30px;
+    text-align: center;
+    line-height: 30px;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    overflow-y: initial !important;
+}
+
+.popup-content {
+    background-color: #F8F7F4;
+    padding: 20px;
+    border-radius: 24px;
+    text-align: center;
+    position: relative;
+    width: 100%;
+    height: 76vh;
+    margin: 12vh 15vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto; 
+}
+
+.popup-banner {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 24px 24px 0 0;
+}
+
+.popup-profile {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 500px;
+    border: 6px solid #F8F7F4;
+    z-index: 1;
+    position: absolute;
+    top: 120px;
+}
+
+.popup-name {
+    position: absolute;
+    top: 270px;
+    text-align: center;
+    font-size: 24px;
+    color: #262626;
+}
+
+.popup-subtitle {
+    position: absolute;
+    top: 310px;
+    text-align: center;
+    color: #686868;
+}
+
+.medals-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 370px;
+}
+
+.medal {
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    margin: 10px;
+    text-align: center;
+    line-height: 50px;
+    color: #262626;
+}
+
+.gold {
+    background-color: rgba(255, 217, 0, 0.5);
+}
+
+.silver {
+    background-color: rgba(192, 192, 192, 0.5);
+}
+
+.bronze {
+    background-color: rgba(255, 166, 0, 0.5);
+}
+
+.popup-prev-olympics {
+    position: absolute;
+    top: 420px;
+    text-align: center;
+    color: #686868;
+}
+
+.popup-body {
+    position: absolute;
+    top: 500px;
+    width: 80%;
+}
+
+.popup-description {
+    width: 88%;
+    background-color: #F3EBE5;
+    color: #262626;
+    padding: 10px 6%;
+    border-radius: 24px;
+    text-align: left;
+}
+
+.instagram-logo {
+    width: 30px;
+    height: 30px;
+    top: 40px;
+    position: relative;
+    padding-bottom: 50px;
+}
+
+.close {
+    transition: all 0.2s ease;
+    rotate: 0deg;
+    position: fixed;
+    top: 12vh;
+    right: 16.5vw;
+    cursor: pointer;
+    z-index: 2;
+    background-color: #F8F7F4;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    font-size: 24px;
+}
+
+.close:hover {
+    transition: all 0.2s ease;
+    rotate: 90deg;
+}
+
+/* Teams table */
+body {
+    font-family: Arial, sans-serif;
+}
+.table-container {
+    position: relative;
+    max-height: 300px;
+    overflow: hidden;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
+tr:nth-child(odd) {
+    background-color: #f9f9f9;
+}
+tr:nth-child(even) {
+    background-color: #e9e9e9;
+}
+tr:first-child td {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+tr:last-child td {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.gradient {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(to bottom, transparent, white);
+}
+#showMore {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    margin-top: 10px;
 }
